--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -1,8 +1,13 @@
 {
-    "name": "löve-launcher",
-    "displayName": "löve-launcher",
+    "name": "love-launcher",
+    "displayName": "Löve Launcher",
     "description": "Launches your project in Löve via a shortcut",
-    "version": "1.0.0",
+    "version": "1.0.1",
+    "icon": "logo.svg",
+    "galleryBanner": {
+        "color": "#6CBEE4",
+        "theme": "dark"
+    },
     "publisher": "JanW",
     "engines": {
         "vscode": "^1.0.0"
@@ -10,6 +15,8 @@
     "categories": [
         "Other"
     ],
+    "keywords" : [ "Löve","love2d","launcher","game","engine" ],
+    "license": "MIT",
     "activationEvents": [
         "onCommand:lövelauncher.launch"
     ],
