Fix for console and ability to save on launch
- Love sends output to a console when using lovec.exe only if you actually start it from a console. Adding --console spawns new console on launch.
- Saving all files on launch is usefull sometimes (or all the time if you're me) so why not.

--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -2,7 +2,7 @@
     "name": "love-launcher",
     "displayName": "Löve Launcher",
     "description": "Launches your project in Löve via a shortcut",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "icon": "logo.svg",
     "galleryBanner": {
         "color": "#6CBEE4",
@@ -63,6 +63,11 @@
                     "type": "boolean",
                     "description": "Should the launcher overwrite the first process when launching another one?",
                     "default": true
+                },
+                "lövelauncher.saveAllonLaunch": {
+                    "type": "boolean",
+                    "description": "Should VS Code save all opened files on Löve launch?",
+                    "default": false
                 }
             }
         }
