--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -1,21 +1,20 @@
 {
-    "name": "love-launcher",
-    "displayName": "Löve Launcher",
-    "description": "Launches your project in Löve via a shortcut",
-    "version": "1.0.5",
-    "icon": "logo.png",
-    "galleryBanner": {
-        "color": "#6CBEE4",
-        "theme": "dark"
-    },
-    "publisher": "JanW",
-    "engines": {
-        "vscode": "^1.0.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "keywords": [
+	"name": "love-launcher",
+	"displayName": "love-launcher",
+	"description": "Launches your project in Löve via a shortcut",
+	"version": "1.0.6",
+	"icon": "images/logo.png",
+	"publisher": "JanW",
+	"engines": {
+		"vscode": "^1.55.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onCommand:lövelauncher.launch"
+	],
+	"keywords": [
         "Löve",
         "love2d",
         "launcher",
@@ -23,12 +22,9 @@
         "engine"
     ],
     "license": "MIT",
-    "activationEvents": [
-        "onCommand:lövelauncher.launch"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [
+	"main": "./dist/extension.js",
+	"contributes": {
+		"commands": [
             {
                 "command": "lövelauncher.launch",
                 "title": "Launch Löve"
@@ -71,14 +67,32 @@
                 }
             }
         }
-    },
-    "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "^0.11.0"
-    }
+	},
+	"scripts": {
+		"vscode:prepublish": "npm run package",
+		"compile": "webpack",
+		"watch": "webpack --watch",
+		"package": "webpack --mode production --devtool hidden-source-map",
+		"test-compile": "tsc -p ./",
+		"test-watch": "tsc -watch -p ./",
+		"pretest": "npm run test-compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"test": "node ./out/test/runTest.js"
+	},
+	"devDependencies": {
+		"@types/vscode": "^1.55.0",
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.0.4",
+		"@types/node": "^12.11.7",
+		"eslint": "^7.19.0",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"glob": "^7.1.6",
+		"mocha": "^8.2.1",
+		"typescript": "^4.1.3",
+		"vscode-test": "^1.5.0",
+		"ts-loader": "^8.0.14",
+		"webpack": "^5.19.0",
+		"webpack-cli": "^4.4.0"
+	}
 }
