--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -1,99 +1,95 @@
 {
-	"name": "love-launcher",
-	"displayName": "love-launcher",
-	"description": "Launches your project in Löve via a shortcut",
-	"version": "1.0.9",
-	"icon": "images/logo.png",
-    "repository": "https://github.com/JanWerder/vscode-love-launcher",
-	"publisher": "JanW",
-	"engines": {
-		"vscode": "^1.55.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:lövelauncher.launch"
-	],
-	"keywords": [
-        "Löve",
-        "love2d",
-        "launcher",
-        "game",
-        "engine"
+  "name": "love-launcher",
+  "displayName": "love-launcher",
+  "description": "Launches your project in Löve via a shortcut",
+  "version": "1.0.9",
+  "icon": "https://raw.githubusercontent.com/JanWerder/vscode-love-launcher/master/love-launcher/images/logo.png",
+  "repository": "https://github.com/JanWerder/vscode-love-launcher",
+  "publisher": "JanW",
+  "engines": {
+    "vscode": "^1.55.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:lövelauncher.launch"
+  ],
+  "keywords": [
+    "Löve",
+    "love2d",
+    "launcher",
+    "game",
+    "engine"
+  ],
+  "license": "MIT",
+  "main": "./dist/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "lövelauncher.launch",
+        "title": "Launch Löve"
+      }
     ],
-    "license": "MIT",
-	"main": "./dist/extension.js",
-	"contributes": {
-		"commands": [
-            {
-                "command": "lövelauncher.launch",
-                "title": "Launch Löve"
-            }
-        ],
-        "keybindings": [
-            {
-                "command": "lövelauncher.launch",
-                "key": "Alt+L"
-            }
-        ],
-        "configuration": {
-            "type": "object",
-            "title": "Löve Launcher config",
-            "properties": {
-                "lövelauncher.path": {
-                    "type": "string",
-                    "description": "Set Path to your love executable on Windows. On macOS make sure that love is accessible via 'open -n -a love'",
-                    "default": "C:\\Program Files\\LOVE\\love.exe"
-                },
-                "lövelauncher.maxInstances": {
-                    "type": "integer",
-                    "description": "Set the max amount of instance you want to be able to spawn at the same time.",
-                    "default": 1
-                },
-                "lövelauncher.useConsoleSubsystem": {
-                    "type": "boolean",
-                    "description": "Should Löve be executed with the console subsystem? (Windows only)",
-                    "default": false
-                },
-                "lövelauncher.overwrite": {
-                    "type": "boolean",
-                    "description": "Should the launcher overwrite the first process when launching another one?",
-                    "default": true
-                },
-                "lövelauncher.saveAllOnLaunch": {
-                    "type": "boolean",
-                    "description": "Should VS Code save all opened files on Löve launch?",
-                    "default": false
-                }
-            }
+    "keybindings": [
+      {
+        "command": "lövelauncher.launch",
+        "key": "Alt+L"
+      }
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Löve Launcher config",
+      "properties": {
+        "lövelauncher.path": {
+          "type": "string",
+          "description": "Set Path to your love executable on Windows. On macOS make sure that love is accessible via 'open -n -a love'",
+          "default": "C:\\Program Files\\LOVE\\love.exe"
+        },
+        "lövelauncher.maxInstances": {
+          "type": "integer",
+          "description": "Set the max amount of instance you want to be able to spawn at the same time.",
+          "default": 1
+        },
+        "lövelauncher.useConsoleSubsystem": {
+          "type": "boolean",
+          "description": "Should Löve be executed with the console subsystem? (Windows only)",
+          "default": false
+        },
+        "lövelauncher.overwrite": {
+          "type": "boolean",
+          "description": "Should the launcher overwrite the first process when launching another one?",
+          "default": true
+        },
+        "lövelauncher.saveAllOnLaunch": {
+          "type": "boolean",
+          "description": "Should VS Code save all opened files on Löve launch?",
+          "default": false
         }
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run package",
-		"compile": "webpack",
-		"watch": "webpack --watch",
-		"package": "webpack --mode production --devtool hidden-source-map",
-		"test-compile": "tsc -p ./",
-		"test-watch": "tsc -watch -p ./",
-		"pretest": "npm run test-compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.55.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.11.7",
-		"eslint": "^7.19.0",
-		"@typescript-eslint/eslint-plugin": "^4.14.1",
-		"@typescript-eslint/parser": "^4.14.1",
-		"glob": "^7.1.6",
-		"mocha": "^8.2.1",
-		"typescript": "^4.1.3",
-		"vscode-test": "^1.5.0",
-		"ts-loader": "^8.0.14",
-		"webpack": "^5.19.0",
-		"webpack-cli": "^4.4.0"
-	}
+      }
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "lint": "eslint src --ext ts"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.63.1",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.12",
+    "eslint": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.0",
+    "typescript": "^4.5.5",
+    "vscode-test": "^1.6.1",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2"
+  }
 }
