--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -3,7 +3,7 @@
   "displayName": "love-launcher",
   "description": "Launches your project in Löve via a shortcut",
   "version": "1.0.9",
-  "icon": "https://raw.githubusercontent.com/JanWerder/vscode-love-launcher/master/love-launcher/images/logo.png",
+  "icon": "images/logo.png",
   "repository": "https://github.com/JanWerder/vscode-love-launcher",
   "publisher": "JanW",
   "engines": {
@@ -77,7 +77,7 @@
     "lint": "eslint src --ext ts"
   },
   "devDependencies": {
-    "@types/vscode": "^1.63.1",
+    "@types/vscode": "^1.55.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.12",
