--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: cd love-launcher/ && ls -la
-      - run: npm i -g vsce ovsx
-      - run: npm install
-      - run: vsce package
+      - name: Package
+        run: cd love-launcher/ && ls -la
+        run: npm i -g vsce ovsx
+        run: npm install
+        run: vsce package
       - run: vsce publish -p ${{secrets.VSCE}}
         env:
           VSCE: ${{secrets.VSCE}}
