--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,21 +2,43 @@ name: Release
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 14
-      - name: Package
-        run: npm i -g vsce && cd love-launcher/ && npm install && vsce package
-      - run: cd love-launcher/ && vsce publish -p ${{secrets.VSCE}}
+          node-version: 20
+
+      - name: Get version from tag
+        id: version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Update package.json version
+        working-directory: love-launcher
+        run: npm version ${{ steps.version.outputs.VERSION }} --no-git-tag-version
+
+      - name: Install dependencies
+        working-directory: love-launcher
+        run: npm install
+
+      - name: Package extension
+        working-directory: love-launcher
+        run: npx vsce package
+
+      - name: Publish to VS Code Marketplace
+        working-directory: love-launcher
+        run: npx vsce publish -p ${{ secrets.VSCE }}
         env:
-          VSCE: ${{secrets.VSCE}}
+          VSCE: ${{ secrets.VSCE }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: love-launcher/*.vsix
+          generate_release_notes: true
