Added StatusBarItem to launch

--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -13,7 +13,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:lövelauncher.launch"
+    "workspaceContains:main.lua"
   ],
   "keywords": [
     "Löve",
