--- a/love-launcher/package.json
+++ b/love-launcher/package.json
@@ -13,7 +13,8 @@
     "Other"
   ],
   "activationEvents": [
-    "workspaceContains:main.lua"
+    "workspaceContains:main.lua",
+    "workspaceContains:conf.lua"
   ],
   "keywords": [
     "Löve",
@@ -29,6 +30,10 @@
       {
         "command": "lövelauncher.launch",
         "title": "Launch Löve"
+      },
+      {
+        "command": "lövelauncher.stop",
+        "title": "Stop Löve"
       }
     ],
     "keybindings": [
@@ -65,6 +70,16 @@
           "type": "boolean",
           "description": "Should VS Code save all opened files on Löve launch?",
           "default": false
+        },
+        "lövelauncher.autoRestartOnSave": {
+          "type": "boolean",
+          "description": "Automatically restart LÖVE when a Lua file is saved",
+          "default": false
+        },
+        "lövelauncher.customArgs": {
+          "type": "string",
+          "description": "Additional command line arguments to pass to LÖVE (space-separated)",
+          "default": ""
         }
       }
     }
